# AWS-Serverless-Image-Processing-Pipeline

./: .gitignore  Makefile  README.md  cleanup.sh  commands_used.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
api/: models.py
app/iam/: role.py
app/lambda_func/: handler.py  setup_lambda.py
app/s3/: s3_utils.py  setup_buckets.py
app/sns/: setup_sns.py
deploy/: deploy_lambda.py  main.py  trigger.py
