[project]
name = "AWS-Serverless-Image-Processing-Pipeline"
version = "0.1.0"
description = "Building an automated system for image processing and management within the AWS ecosystem"
authors = [
    {name = "M. Sanjay Uddith Raju"},
    {email = "uddithmachiraju@gmail.com"}
]
package_mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = ">=2.0.0"
boto3 = "1.39.4"

[build-system]
requires = [
    "poetry-core>=2.0.0"
]
build-backend = "poetry.core.masonry.api"